--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "PRIVATE_KEY_PATH=code-signing-keys/private-key.pem next dev",
+    "dev": "next dev",
     "build": "next build",
-    "start": "PRIVATE_KEY_PATH=code-signing-keys/private-key.pem next start",
+    "start": "next start",
     "lint": "eslint common pages",
     "test": "jest",
     "expo-publish": "./scripts/publish.sh -d 1/$(date +%s)",
